--- a/sass/main/_information.scss
+++ b/sass/main/_information.scss
@@ -110,7 +110,6 @@
     width: calc(100% - 12rem);
     max-width: $width;
     height: 65rem;
-    border-radius: 0.6rem;
 
     background-image: url('../../src/img/Yasuo.About.jpg');
     background-repeat: no-repeat;
